compiler/testData/cli/jvm/suspensionPointInMonitor.out
compiler/testData/cli/jvm/suspensionPointInMonitor.kt:26:13: error: the 'suspend fun suspensionPoint(): Unit' suspension point is inside a critical section.
            suspensionPoint()
            ^
compiler/testData/cli/jvm/suspensionPointInMonitor.kt:60:17: error: the 'suspend fun suspensionPoint(): Unit' suspension point is inside a critical section.
                suspensionPoint()
                ^
COMPILATION_ERROR
